# ChangeLog for dev-python/pyhistorian
# Copyright 1999-2009 Gentoo Foundation; Distributed under the GPL v2
# $Header: $

  14 Oct 2009; James Rowe <jnrowe@gmail.com> pyhistorian-0.6.1.ebuild,
  pyhistorian-0.6.2.ebuild:
  Switch to using jnrowe-pypi eclass.

*pyhistorian-0.6.2 (13 Oct 2009)

  13 Oct 2009; James Rowe <jnrowe@gmail.com> +pyhistorian-0.6.2.ebuild:
  Version bump [85a].

  06 Oct 2009; James Rowe <jnrowe@gmail.com> -pyhistorian-0.6.ebuild:
  Removing obsolete ebuild.

*pyhistorian-0.6.1 (06 Oct 2009)

  06 Oct 2009; James Rowe <jnrowe@gmail.com> +pyhistorian-0.6.1.ebuild:
  Version bump

  02 Oct 2009; James Rowe <jnrowe@gmail.com> pyhistorian-0.6.ebuild:
  Keyworded ~x86.

*pyhistorian-0.6 (02 Oct 2009)

  02 Oct 2009; James Rowe <jnrowe@gmail.com> +pyhistorian-0.6.ebuild,
  +metadata.xml:
  Initial ebuild, by me.
