@@ -3,14 +3,16 @@ Hash: SHA1
 
 DIST pyhistorian-0.6.1.tar.gz 18029 RMD160 28a2a66eadb4cee7dff953cb6ccb8ec80dc70310 SHA1 de710deaf6396b24482bebdb00890b0765a93e1a SHA256 fb6dfa02c779a145b0f9ec5dbdb578a9e35ed84d50d0a2bf3bb2d503a883a4c5
 DIST pyhistorian-0.6.2.tar.gz 23777 RMD160 053e8a48c9da2f72b76a0f4cc6265b5dd31a43c0 SHA1 19a9e8eed46a63b5e4ee7059de16b022a46dffdc SHA256 58151a110ad419e6fe0eed55783d19fdebf662cc7b6bad4ae13ea1eee2251411
+DIST pyhistorian-0.6.3.tar.gz 23783 RMD160 2e25fc20537e58a97ee4698ae37d854c28ae2bcd SHA1 cda10d74d96e3bdd86a8cd57cd4070fc7240c5b1 SHA256 7a84085388f97d2899a6ffae3658493c9ffbc2aea8baa1286889d7982cef61a6
 EBUILD pyhistorian-0.6.1.ebuild 415 RMD160 46d7afc87fc0763d06367d4dce9451baa5a0eaa8 SHA1 eec5f80e8d9cb0d0239dd971cbe7f7e78ebd1ca5 SHA256 9015349b70c9e9f3fae78094a3ed09708cae15ee264b9174491fa1bbd4b5681a
 EBUILD pyhistorian-0.6.2.ebuild 476 RMD160 66a211378eae1aa8867267eba47711ffcd6512cd SHA1 be0c28beab8f1f82634d293412eea738cbeca842 SHA256 483447b4163e18602a02307329717d39fe22462f22bacbd4572ca6a1026b6c6c
-MISC ChangeLog 844 RMD160 44e533448464e51eb85556dd7446e9ba79739492 SHA1 67b9aff19fae2e56fa8a99db8a3890ea35bba5df SHA256 8c8058043b724be769dadf9731909e97cafc3ed53637e7aab41c0d10b2751a1a
+EBUILD pyhistorian-0.6.3.ebuild 476 RMD160 66a211378eae1aa8867267eba47711ffcd6512cd SHA1 be0c28beab8f1f82634d293412eea738cbeca842 SHA256 483447b4163e18602a02307329717d39fe22462f22bacbd4572ca6a1026b6c6c
+MISC ChangeLog 973 RMD160 8cc22cd798461919f65839e62d90d5d50fb36087 SHA1 49197df576fdbe3f0334fa89c04c0a02cc143c40 SHA256 be46990ffcac4ee18273b76eb5630a1d1e9401e0ffa7b7685a93376415b7d083
 MISC metadata.xml 541 RMD160 b52e243af05e53554445d9778a161a78a1d7d4e5 SHA1 4f6307743870414af0eeb7b6c0e03cfe343571ad SHA256 fedfc68319ce9c5e5b87c28c77b2624a3e353ce92ae335e41a678d956607a0d5
 -----BEGIN PGP SIGNATURE-----
 Version: GnuPG v2.0.11 (GNU/Linux)
 
-iEYEARECAAYFAkrVvjsACgkQzJrj3cAXR0n3PgCdFwZgUGyhcX72NOtQlOEAZh9V
-nakAoMAKBI4btJBDoDBJkqNlgI+J4mBr
-=cXaa
+iEYEARECAAYFAkrhcwgACgkQzJrj3cAXR0lF1QCeMVqty7kwm09uxZ8jN/fjGY57
+nVUAn3SsBl+bDxKQEpRaajzGqa5yWs41
+=+WPp
 -----END PGP SIGNATURE-----
