@@ -2,6 +2,11 @@
 # Copyright 1999-2009 Gentoo Foundation; Distributed under the GPL v2
 # $Header: $
 
+*pyhistorian-0.6.3 (23 Oct 2009)
+
+  23 Oct 2009; James Rowe <jnrowe@gmail.com> +pyhistorian-0.6.3.ebuild:
+  Version bump [944].
+
   14 Oct 2009; James Rowe <jnrowe@gmail.com> pyhistorian-0.6.1.ebuild,
   pyhistorian-0.6.2.ebuild:
   Switch to using jnrowe-pypi eclass.
